<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/_1"
            android:textSize="45dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/image"
                android:src="@drawable/oneathlete" />

            <TextView
                android:id="@+id/tvAthlete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/athlete"
                android:textSize="45dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/divider"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="@string/first" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="@string/last" >
            </EditText>

            <EditText
                android:id="@+id/etAbbrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/abbrev" >
            </EditText>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvGraduation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graduation_year_" />

                <Spinner
                    android:id="@+id/sGraduation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_" />

                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_inches_"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_lbs_"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tv6k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6k_time_" />

                <EditText
                    android:id="@+id/et6k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_min_sec_hun_"
                    android:inputType="time" />

                <TextView
                    android:id="@+id/tv2k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2k_time_" />

                <EditText
                    android:id="@+id/et2k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_min_sec_"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/bAcceptAthlete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/accept_nathlete" />

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/linearLayout1"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/rbPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/port" />

                <RadioButton
                    android:id="@+id/rbStarboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starboard" />

                <RadioButton
                    android:id="@+id/rbBoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both" />

                <RadioButton
                    android:id="@+id/rbCoxswain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coxswain" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/rgType"
                android:text="@string/type_" />

            <Button
                android:id="@+id/bReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/reset" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>